Harden CompiledArtifact byte-array ownership boundary