@@ -4,14 +4,7 @@ import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
-/**
- * Deployment artifact produced by the compiler. The JVM backend emits class bytes;
- * packaging into a JAR is a deployment concern, not the execution format itself.
- *
- * Byte arrays are defensively copied both when the artifact is constructed and
- * when callers read them. This keeps the compiler artifact immutable across the
- * API boundary.
- */
+/** Immutable compiler deployment artifact with a strict byte-array ownership boundary. */
 public record CompiledArtifact(
         String workspaceId,
         CompilationTarget target,
@@ -24,20 +17,25 @@ public record CompiledArtifact(
         Objects.requireNonNull(compilerVersion, "compilerVersion");
         Objects.requireNonNull(classBytes, "classBytes");
 
-        Map<String, byte[]> copy = new LinkedHashMap<>();
+        LinkedHashMap<String, byte[]> owned = new LinkedHashMap<>();
         classBytes.forEach((name, bytes) -> {
             Objects.requireNonNull(name, "classBytes key");
             Objects.requireNonNull(bytes, "classBytes value");
-            copy.put(name, bytes.clone());
+            owned.put(name, bytes.clone());
         });
-        classBytes = Map.copyOf(copy);
+
+        // Keep an owned map in the record component. The accessor below never
+        // exposes these arrays, so callers cannot mutate artifact state.
+        classBytes = java.util.Collections.unmodifiableMap(owned);
     }
 
-    /** Returns a defensive copy of every class byte array. */
+    /** Returns a fresh immutable map and a fresh byte[] for every class. */
     @Override
     public Map<String, byte[]> classBytes() {
-        Map<String, byte[]> copy = new LinkedHashMap<>();
-        classBytes.forEach((name, bytes) -> copy.put(name, bytes.clone()));
-        return Map.copyOf(copy);
+        LinkedHashMap<String, byte[]> copy = new LinkedHashMap<>();
+        for (Map.Entry<String, byte[]> entry : classBytes.entrySet()) {
+            copy.put(entry.getKey(), entry.getValue().clone());
+        }
+        return java.util.Collections.unmodifiableMap(copy);
     }
 }
